Made the maximum byte transfer slightly smaller due to overflow seen.

--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,8 @@ authors = ["Greg-R <soapy-smith@comcast.net>"]
 version = "0.1.0"
 
 [deps]
+ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
