--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,7 @@ authors = ["Greg-R <soapy-smith@comcast.net>"]
 version = "0.1.0"
 
 [deps]
-ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
+ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
